src/main/javacc/turix.jj
options {
  STATIC = false;
  UNICODE_INPUT = true;
}

PARSER_BEGIN(Turix)
package com.turix.TurixCC;

import codigo_intermedio.QuadGenerator;
import codigo_intermedio.QuadPrinter;
import Semantico.TokenAsignaciones;
import Semantico.erroresSem;

import java.util.ArrayList;
import java.util.List;

public class Turix {

  // ===== Bloques de código intermedio ya formateados =====
  private final List<String> quadBlocks = new ArrayList<>();

  /** Devuelve y NO limpia (la GUI decide). */
  public List<String> getQuadBlocks() {
    return quadBlocks;
  }

  /** Emite un bloque de cuádruplas para var = exprInfija (formateado como en la consola). */
  void emitQuad(String var, String exprInfija) {
    QuadGenerator.Result r = QuadGenerator.fromAssignment(var, exprInfija);
    String block = QuadPrinter.formatBlock(quadBlocks.size() + 1, var, exprInfija, r);
    quadBlocks.add(block);
  }

  // ===== Buffer para reconstruir la expresión INFija mientras se parsea =====
  private final StringBuilder exprBuffer = new StringBuilder();

  void exprBufClear() { exprBuffer.setLength(0); }
  String exprBufGet() { return exprBuffer.toString().trim(); }

  void emitTok(Token tok) {
    if (tok != null && tok.image != null) {
      exprBuffer.append(tok.image).append(' ');
    }
  }

  void emitText(String s) {
    if (s != null && !s.isEmpty()) {
      exprBuffer.append(s).append(' ');
    }
  }
}
PARSER_END(Turix)

SKIP : {
  " " | "\t" | "\r" | "\n"
}

TOKEN : {

    < NUM:( (["0"-"9"])+ )>
  | < NUM_DEC:(( ["0"-"9"] )+ ( "." (["0"-"9"])+ ) )>
  | <STRING_LITERAL :
        // String multilínea
        "\"\"\"" (~["\""] | "\"" | "\"\"")* "\"\"\""
      |
        // String normal de una línea
        "\"" ( "\\" | ~["\"","\\","\n","\r"] )* "\""
    >

  // OPERADORES MATEMÁTICOS
  | < MAS: "+" >
  | < MENOS: "-" >
  | < MULTIPLICACION: "*" >
  | < DIVISION: "/" >
  | < MODULO: "%" >
  | < DOUBLE: "Double" >
  | < IGUAL: "=" >
  | < SQRT: "sqrt" >
  | < POW: "pow" >
  | < COS: "cos" >
  | < SIN: "sin" >
  | < LOG: "log" >

  // TIPOS DE DATO
  | < INT: "Int" >
  | < FLOAT: "Float" >
  | < STRING: "String" >
  | < BOOL: "Bool" >
  | < CHARACTER: "Character" >

  // OPERADORES LÓGICOS
  | < AND: "&&" >
  | < NOT: "!" >
  | < OR: "||" >

  // RELACIONALES
  | < REL_OP : "==" | "!=" | ">=" | "<=" | ">" | "<" >

  // Símbolos
  | < DOS_PUN: ":" >
  | < FLECHA : "->" >
  | < COMILLA : "\"" >
  | < COMA : "," >

  // Palabras reservadas
  | < FUNC: "func" >
  | < LET: "let" >
  | < VAR: "var" >
  | < TERMINATOR: "terminator" >
  | < SEPARATOR: "separator" >
  | < PRINT: "print" >
  | < READLINE: "readLine" >

  // Control de flujo
  | < BREAK: "break" >
  | < CASE: "case" >
  | < DEFAULT_KEYWORD: "default" >
  | < REPEAT: "repeat" >
  | < ELSE: "else" >
  | < FOR: "for" >
  | < IF: "if" >
  | < IN: "in" >
  | < RETURN: "return" >
  | < SWITCH: "switch" >
  | < WHERE: "where" >
  | < WHILE: "while" >

  // Paréntesis/llaves/corchetes
  | < K_I: "{" >
  | < K_F: "}" >
  | < PAR_I: "(" >
  | < PAR_F: ")" >
  | < COR_I: "[" >
  | < COR_F: "]" >

  // Literales booleanos
  | < FALSE: "false" >
  | < TRUE: "true" >

  // IDENTIFICADOR (tu definición original)
  | < IDENT : "`" ( ["A"-"Z","a"-"z","0"-"9","_"] )+ "`"
    | ( ["A"-"Z","a"-"z","_"] ) ( ["A"-"Z","a"-"z","0"-"9","_"] )* >

  // ERRORES
  | < ERROR: (["0"-"9"])+ ("." (["0"-"9"])+){2,} >
  | < ERROROPERA:  "=!" | "=>" | "=<" >
  | < ERROR_IDENT :
      (["A"-"Z","a"-"z","_"])(["A"-"Z","a"-"z","0"-"9","_"])*
      (~["A"-"Z","a"-"z","0"-"9","_"," ","\t","\r","\n",
        "!","\"","%","(",")","*","+",",","-","/",":",
        "=","[","]","{","}","&","|","?",">","<"])
      (["A"-"Z","a"-"z","0"-"9","_"])*
      |
      (~["A"-"Z","a"-"z","_"," ","\t","\r","\n",
        "!","\"","%","(",")","*","+",",","-","/",":",
        "=","[","]","{","}","&","|","?",">","<","0"-"9"])+
    >
}

// =============================
// CUERPO DEL PROGRAMA
// =============================
void Start() :
{
    TokenAsignaciones.SetTables();
}
{
    {
      // limpiar bloques de compilaciones previas (por si reusan el parser)
      this.getQuadBlocks().clear();
    }
    ListaSentencias() <EOF>
}

void ListaSentencias() :
{}
{
    ( Sentencia() )*
}

void Sentencia() :
{}
{
     DeclaracionVar()
   | DeclaracionLet()
   | DeclaracionIF()
   | Func()
   | RetornoSentencia()
   | Imprimir()
   | SentenciaRepeat()
   | LOOKAHEAD(2) LlamadoFunc()
   | Asignacion()
   | Switch()
   | SentenciaWhile()
   | Exp(null)
}

// =============================
// DECLARACIONES / CONTROL
// =============================

// IF
void DeclaracionIF() :
{}
{
    <IF> Condicion() <K_I> ListaSentencias() <K_F> (LOOKAHEAD(2) DecElse()| LOOKAHEAD(2) ElseIf())?
}

void DecElse() :
{}
{
    <ELSE> <K_I> ListaSentencias() <K_F>
}

void ElseIf():
{}
{
     <ELSE> <IF> Condicion() <K_I> ListaSentencias() <K_F> (LOOKAHEAD(2) DecElse()| LOOKAHEAD(2) ElseIf())?
}

// SWITCH
void Switch():
{}
{
    <SWITCH> Exp(null) <K_I> (Case())* (DefaultCase())? <K_F>
}
void Case():
{}
{
    <CASE> Exp(null) <DOS_PUN> ListaSentencias()
}

void DefaultCase():
{}
{
    <DEFAULT_KEYWORD> <DOS_PUN> ListaSentencias()
}

// REPEAT
void SentenciaRepeat():
{}
{
    <REPEAT> <K_I> ListaSentencias() <K_F> <WHILE> Condicion()
}

// WHILE
void SentenciaWhile() :
{}
{
    <WHILE> Condicion() <K_I> ListaSentencias() <K_F>
}

// =============================
// VAR / LET
// =============================

// VAR (con inicialización opcional)
void DeclaracionVar() :
{ Token id; Token tipo=null; Token exp=null;}
{
    <VAR> id=<IDENT> ( <DOS_PUN> tipo=Tipo() )?
    (
      <IGUAL>
      {
        exprBufClear(); // capturar la infija que viene
      }
      exp=Exp(id)
      {
         TokenAsignaciones.InsertarSimbolo(id, tipo != null ? tipo.kind : 20, exp);
         // emitir cuádruplas de la inicialización
         emitQuad(id.image, exprBufGet());
      }
    )?
    {
        // si no hubo = expr; inserta el símbolo sin valor
        if (exp == null) {
            TokenAsignaciones.InsertarSimbolo(id, tipo != null ? tipo.kind : 20, null);
        }
    }
}

// LET (con inicialización opcional)
void DeclaracionLet() :
{ Token id=null; }
{
    <LET> id=<IDENT> ( <DOS_PUN> Tipo() )?
    ( <IGUAL> { exprBufClear(); } Exp(null) { emitQuad(id.image, exprBufGet()); } )?
}

void ListaLet():
{}
{
  DeclaracionLet() (<COMA> DeclaracionLet())*
}

// ASIGNACIÓN
void Asignacion():
{ Token izq; Token der; }
{
    izq=<IDENT> <IGUAL>
    {
      exprBufClear(); // limpiar buffer antes de leer la expr
    }
    der=Exp(null)
    {
        TokenAsignaciones.checkAsing(izq, der);
        emitQuad(izq.image, exprBufGet());
    }
}

// =============================
// CONDICIÓN
// =============================
void Condicion() :
{}
{
   ( Exp(null) (<REL_OP> Exp(null) ((<AND> | <OR> | <NOT>)  (CondicionAnidada()|Exp(null)) (<REL_OP> Exp(null))? )* )? ) | ListaLet()
}

void CondicionAnidada():
{}
{
  <PAR_I> Condicion() <PAR_F>
}

// =============================
// TIPOS
// =============================
Token Tipo() :
{
  Token t = null;
}
{
      t=<INT>      { return t; }
    | t=<FLOAT>    { return t; }
    | t=<STRING>   { return t; }
    | t=<BOOL>     { return t; }
    | t=<DOUBLE>   { return t; }
}

// =============================
// OPERADORES (no usada para armar infija)
// =============================
void Operadores():
{}
{
  <MAS> | <MENOS> | <MULTIPLICACION> | <DIVISION> | <MODULO>
}

// =============================
// FUNCIONES
// =============================
void funcionesDefinidas():
{}
{
   <SQRT> | <POW> | <COS> | <SIN> | <LOG> | <READLINE>
}

void Func() :
{}
{
    <FUNC> <IDENT> <PAR_I> (Parametros())? <PAR_F> (Retorno())? <K_I> ListaSentencias() <K_F>
}

void LlamadoFunc():
{}
{
   ( <IDENT> | funcionesDefinidas() | Tipo() ) <PAR_I> (ListaExp())? <PAR_F>
}

void ParametroLlamadaFun():
{ Token izq; Token der; }
{
  izq=<IDENT> <DOS_PUN> der=Exp(izq) {
    TokenAsignaciones.checkAsing(izq, der);
  }
}

// RETURN
void Retorno() :
{}
{
   <FLECHA> Tipo()
}

void RetornoSentencia():
{}
{
   <RETURN> { exprBufClear(); } Exp(null)
}

// PRINT
void Imprimir():
{}
{
   <PRINT> <PAR_I> ListaExpPrint() <PAR_F>
}

void ListaExpPrint():
{}
{
    { exprBufClear(); }
    Exp(null)
    {
      // target virtual para visualizar cuádruplas de print
      emitQuad("_resultado_print", exprBufGet());
    }
    (
      <COMA>
      (
        { exprBufClear(); }
        Exp(null)
        {
          emitQuad("_resultado_print", exprBufGet());
        }
        | Opcion_Print()
      )
    )*
}

void Opcion_Print():
{}
{
    (  <TERMINATOR> <DOS_PUN> Exp(null) )
  | (  <SEPARATOR>  <DOS_PUN> Exp(null) )
}

// =============================
// PARÁMETROS
// =============================
void Parametros() :
{}
{
   Parametro() (<COMA> Parametro())*
}

void Parametro() :
{ Token id; Token tipo; }
{
   id=<IDENT> <DOS_PUN> tipo=Tipo() {
     TokenAsignaciones.InsertarSimbolo(id, tipo != null ? tipo.kind : 20, null);
   }
}

// =============================
// LISTAS / EXPRESIONES
// =============================
void ListaExp():
{}
{
    Exp(null) (<COMA> Exp(null))*
}

// ===== Termino (agrega al buffer) =====
Token Term() :
{ Token t = null; }
{
    t=<NUM>                 { emitTok(t); return t; }
  | t=<NUM_DEC>             { emitTok(t); return t; }
  | LOOKAHEAD(2) LlamadoFunc() { emitText("call"); return new Token(5); }
  | LOOKAHEAD(2) ParametroLlamadaFun() { emitText("param"); return new Token(5); }
  | t=<IDENT> {
      String msg = TokenAsignaciones.checkVariable(t);
      if (!msg.equals(" ")) {
          erroresSem.addError(msg);
      }
      emitTok(t);
      return t;
    }
  | t=<TRUE>                { emitTok(t); return t; }
  | t=<FALSE>               { emitTok(t); return t; }
  | t=<STRING_LITERAL>      { emitTok(t); return t; }
}

// ===== Expresión (construye INFija en exprBuffer) =====
Token Exp(Token iden) :
{
    Token t = null;
    Token temp = null;
    Token op = null;
}
{
    ( <MENOS> { emitText("-"); } )?
    t=Term() {
        // Conserva tu lógica original: si el token es de cierto tipo
        if (t.kind == 60) {
            iden = t;
        }
    }
    (
      ( op=<MAS> | op=<MENOS> | op=<MULTIPLICACION> | op=<DIVISION> | op=<MODULO> )
      {
        // INFija: escribe el operador ANTES de consumir el operando derecho
        emitTok(op);
      }
      (
          temp=Term()
            {
              if (iden != null) {
                  TokenAsignaciones.checkAsing(iden, temp);
              }
            }
        | <PAR_I> { emitText("("); } temp=Exp(null) <PAR_F> { emitText(")"); }
      )
    )*
    { return t; }
}
