target/generated-sources/javacc/com/turix/TurixCC/Turix.java
/* Turix.java */
/* Generated By:JavaCC: Do not edit this line. Turix.java */
package com.turix.TurixCC;

import codigo_intermedio.QuadGenerator;
import codigo_intermedio.QuadPrinter;
import Semantico.TokenAsignaciones;
import Semantico.erroresSem;

import java.util.ArrayList;
import java.util.List;

public class Turix implements TurixConstants {

  // ===== Bloques de código intermedio ya formateados =====
  private final List<String> quadBlocks = new ArrayList<>();

  /** Devuelve y NO limpia (la GUI decide). */
  public List<String> getQuadBlocks() {
    return quadBlocks;
  }

  /** Emite un bloque de cuádruplas para var = exprInfija (formateado como en la consola). */
  void emitQuad(String var, String exprInfija) {
    QuadGenerator.Result r = QuadGenerator.fromAssignment(var, exprInfija);
    String block = QuadPrinter.formatBlock(quadBlocks.size() + 1, var, exprInfija, r);
    quadBlocks.add(block);
  }

  // ===== Buffer para reconstruir la expresión INFija mientras se parsea =====
  private final StringBuilder exprBuffer = new StringBuilder();

  void exprBufClear() { exprBuffer.setLength(0); }
  String exprBufGet() { return exprBuffer.toString().trim(); }

  void emitTok(Token tok) {
    if (tok != null && tok.image != null) {
      exprBuffer.append(tok.image).append(' ');
    }
  }

  void emitText(String s) {
    if (s != null && !s.isEmpty()) {
      exprBuffer.append(s).append(' ');
    }
  }

// =============================
// CUERPO DEL PROGRAMA
// =============================
  final public void Start() throws ParseException {TokenAsignaciones.SetTables();
// limpiar bloques de compilaciones previas (por si reusan el parser)
      this.getQuadBlocks().clear();
    ListaSentencias();
    jj_consume_token(0);
}

  final public void ListaSentencias() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUM:
      case NUM_DEC:
      case STRING_LITERAL:
      case MENOS:
      case DOUBLE:
      case SQRT:
      case POW:
      case COS:
      case SIN:
      case LOG:
      case INT:
      case FLOAT:
      case STRING:
      case BOOL:
      case FUNC:
      case LET:
      case VAR:
      case PRINT:
      case READLINE:
      case REPEAT:
      case IF:
      case RETURN:
      case SWITCH:
      case WHILE:
      case FALSE:
      case TRUE:
      case IDENT:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Sentencia();
    }
}

  final public void Sentencia() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      DeclaracionVar();
      break;
      }
    case LET:{
      DeclaracionLet();
      break;
      }
    case IF:{
      DeclaracionIF();
      break;
      }
    case FUNC:{
      Func();
      break;
      }
    case RETURN:{
      RetornoSentencia();
      break;
      }
    case PRINT:{
      Imprimir();
      break;
      }
    case REPEAT:{
      SentenciaRepeat();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_1(2)) {
        LlamadoFunc();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENT:{
          Asignacion();
          break;
          }
        case SWITCH:{
          Switch();
          break;
          }
        case WHILE:{
          SentenciaWhile();
          break;
          }
        case NUM:
        case NUM_DEC:
        case STRING_LITERAL:
        case MENOS:
        case DOUBLE:
        case SQRT:
        case POW:
        case COS:
        case SIN:
        case LOG:
        case INT:
        case FLOAT:
        case STRING:
        case BOOL:
        case READLINE:
        case FALSE:
        case TRUE:{
          Exp(null);
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
}

// =============================
// DECLARACIONES / CONTROL
// =============================

// IF
  final public void DeclaracionIF() throws ParseException {
    jj_consume_token(IF);
    Condicion();
    jj_consume_token(K_I);
    ListaSentencias();
    jj_consume_token(K_F);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      if (jj_2_2(2)) {
        DecElse();
      } else if (jj_2_3(2)) {
        ElseIf();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
}

  final public void DecElse() throws ParseException {
    jj_consume_token(ELSE);
    jj_consume_token(K_I);
    ListaSentencias();
    jj_consume_token(K_F);
}

  final public void ElseIf() throws ParseException {
    jj_consume_token(ELSE);
    jj_consume_token(IF);
    Condicion();
    jj_consume_token(K_I);
    ListaSentencias();
    jj_consume_token(K_F);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      if (jj_2_4(2)) {
        DecElse();
      } else if (jj_2_5(2)) {
        ElseIf();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
}

// SWITCH
  final public void Switch() throws ParseException {
    jj_consume_token(SWITCH);
    Exp(null);
    jj_consume_token(K_I);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CASE:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      Case();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DEFAULT_KEYWORD:{
      DefaultCase();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(K_F);
}

  final public void Case() throws ParseException {
    jj_consume_token(CASE);
    Exp(null);
    jj_consume_token(DOS_PUN);
    ListaSentencias();
}

  final public void DefaultCase() throws ParseException {
    jj_consume_token(DEFAULT_KEYWORD);
    jj_consume_token(DOS_PUN);
    ListaSentencias();
}

// REPEAT
  final public void SentenciaRepeat() throws ParseException {
    jj_consume_token(REPEAT);
    jj_consume_token(K_I);
    ListaSentencias();
    jj_consume_token(K_F);
    jj_consume_token(WHILE);
    Condicion();
}

// WHILE
  final public void SentenciaWhile() throws ParseException {
    jj_consume_token(WHILE);
    Condicion();
    jj_consume_token(K_I);
    ListaSentencias();
    jj_consume_token(K_F);
}

// =============================
// VAR / LET
// =============================

// VAR (con inicialización opcional)
  final public void DeclaracionVar() throws ParseException {Token id; Token tipo=null; Token exp=null;
    jj_consume_token(VAR);
    id = jj_consume_token(IDENT);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DOS_PUN:{
      jj_consume_token(DOS_PUN);
      tipo = Tipo();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUAL:{
      jj_consume_token(IGUAL);
exprBufClear(); // capturar la infija que viene

      exp = Exp(id);
TokenAsignaciones.InsertarSimbolo(id, tipo != null ? tipo.kind : 20, exp);
         // emitir cuádruplas de la inicialización
         emitQuad(id.image, exprBufGet());
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
// si no hubo = expr; inserta el símbolo sin valor
        if (exp == null) {
            TokenAsignaciones.InsertarSimbolo(id, tipo != null ? tipo.kind : 20, null);
        }
}

// LET (con inicialización opcional)
  final public void DeclaracionLet() throws ParseException {Token id=null;
    jj_consume_token(LET);
    id = jj_consume_token(IDENT);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DOS_PUN:{
      jj_consume_token(DOS_PUN);
      Tipo();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUAL:{
      jj_consume_token(IGUAL);
exprBufClear();
      Exp(null);
emitQuad(id.image, exprBufGet());
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
}

  final public void ListaLet() throws ParseException {
    DeclaracionLet();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMA);
      DeclaracionLet();
    }
}

// ASIGNACIÓN
  final public void Asignacion() throws ParseException {Token izq; Token der;
    izq = jj_consume_token(IDENT);
    jj_consume_token(IGUAL);
exprBufClear(); // limpiar buffer antes de leer la expr

    der = Exp(null);
TokenAsignaciones.checkAsing(izq, der);
        emitQuad(izq.image, exprBufGet());
}

// =============================
// CONDICIÓN
// =============================
  final public void Condicion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUM:
    case NUM_DEC:
    case STRING_LITERAL:
    case MENOS:
    case DOUBLE:
    case SQRT:
    case POW:
    case COS:
    case SIN:
    case LOG:
    case INT:
    case FLOAT:
    case STRING:
    case BOOL:
    case READLINE:
    case FALSE:
    case TRUE:
    case IDENT:{
      Exp(null);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case REL_OP:{
        jj_consume_token(REL_OP);
        Exp(null);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case AND:
          case NOT:
          case OR:{
            ;
            break;
            }
          default:
            jj_la1[12] = jj_gen;
            break label_4;
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case AND:{
            jj_consume_token(AND);
            break;
            }
          case OR:{
            jj_consume_token(OR);
            break;
            }
          case NOT:{
            jj_consume_token(NOT);
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case PAR_I:{
            CondicionAnidada();
            break;
            }
          case NUM:
          case NUM_DEC:
          case STRING_LITERAL:
          case MENOS:
          case DOUBLE:
          case SQRT:
          case POW:
          case COS:
          case SIN:
          case LOG:
          case INT:
          case FLOAT:
          case STRING:
          case BOOL:
          case READLINE:
          case FALSE:
          case TRUE:
          case IDENT:{
            Exp(null);
            break;
            }
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case REL_OP:{
            jj_consume_token(REL_OP);
            Exp(null);
            break;
            }
          default:
            jj_la1[15] = jj_gen;
            ;
          }
        }
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      break;
      }
    case LET:{
      ListaLet();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void CondicionAnidada() throws ParseException {
    jj_consume_token(PAR_I);
    Condicion();
    jj_consume_token(PAR_F);
}

// =============================
// TIPOS
// =============================
  final public Token Tipo() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      t = jj_consume_token(INT);
{if ("" != null) return t;}
      break;
      }
    case FLOAT:{
      t = jj_consume_token(FLOAT);
{if ("" != null) return t;}
      break;
      }
    case STRING:{
      t = jj_consume_token(STRING);
{if ("" != null) return t;}
      break;
      }
    case BOOL:{
      t = jj_consume_token(BOOL);
{if ("" != null) return t;}
      break;
      }
    case DOUBLE:{
      t = jj_consume_token(DOUBLE);
{if ("" != null) return t;}
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

// =============================
// OPERADORES (no usada para armar infija)
// =============================
  final public void Operadores() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MAS:{
      jj_consume_token(MAS);
      break;
      }
    case MENOS:{
      jj_consume_token(MENOS);
      break;
      }
    case MULTIPLICACION:{
      jj_consume_token(MULTIPLICACION);
      break;
      }
    case DIVISION:{
      jj_consume_token(DIVISION);
      break;
      }
    case MODULO:{
      jj_consume_token(MODULO);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// =============================
// FUNCIONES
// =============================
  final public void funcionesDefinidas() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SQRT:{
      jj_consume_token(SQRT);
      break;
      }
    case POW:{
      jj_consume_token(POW);
      break;
      }
    case COS:{
      jj_consume_token(COS);
      break;
      }
    case SIN:{
      jj_consume_token(SIN);
      break;
      }
    case LOG:{
      jj_consume_token(LOG);
      break;
      }
    case READLINE:{
      jj_consume_token(READLINE);
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void Func() throws ParseException {
    jj_consume_token(FUNC);
    jj_consume_token(IDENT);
    jj_consume_token(PAR_I);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      Parametros();
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(PAR_F);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FLECHA:{
      Retorno();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    jj_consume_token(K_I);
    ListaSentencias();
    jj_consume_token(K_F);
}

  final public void LlamadoFunc() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENT:{
      jj_consume_token(IDENT);
      break;
      }
    case SQRT:
    case POW:
    case COS:
    case SIN:
    case LOG:
    case READLINE:{
      funcionesDefinidas();
      break;
      }
    case DOUBLE:
    case INT:
    case FLOAT:
    case STRING:
    case BOOL:{
      Tipo();
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PAR_I);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUM:
    case NUM_DEC:
    case STRING_LITERAL:
    case MENOS:
    case DOUBLE:
    case SQRT:
    case POW:
    case COS:
    case SIN:
    case LOG:
    case INT:
    case FLOAT:
    case STRING:
    case BOOL:
    case READLINE:
    case FALSE:
    case TRUE:
    case IDENT:{
      ListaExp();
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    jj_consume_token(PAR_F);
}

  final public void ParametroLlamadaFun() throws ParseException {Token izq; Token der;
    izq = jj_consume_token(IDENT);
    jj_consume_token(DOS_PUN);
    der = Exp(izq);
TokenAsignaciones.checkAsing(izq, der);
}

// RETURN
  final public void Retorno() throws ParseException {
    jj_consume_token(FLECHA);
    Tipo();
}

  final public void RetornoSentencia() throws ParseException {
    jj_consume_token(RETURN);
exprBufClear();
    Exp(null);
}

// PRINT
  final public void Imprimir() throws ParseException {
    jj_consume_token(PRINT);
    jj_consume_token(PAR_I);
    ListaExpPrint();
    jj_consume_token(PAR_F);
}

  final public void ListaExpPrint() throws ParseException {
exprBufClear();
    Exp(null);
// target virtual para visualizar cuádruplas de print
      emitQuad("_resultado_print", exprBufGet());
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_5;
      }
      jj_consume_token(COMA);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUM:
      case NUM_DEC:
      case STRING_LITERAL:
      case MENOS:
      case DOUBLE:
      case SQRT:
      case POW:
      case COS:
      case SIN:
      case LOG:
      case INT:
      case FLOAT:
      case STRING:
      case BOOL:
      case READLINE:
      case FALSE:
      case TRUE:
      case IDENT:{
exprBufClear();
        Exp(null);
emitQuad("_resultado_print", exprBufGet());
        break;
        }
      case TERMINATOR:
      case SEPARATOR:{
        Opcion_Print();
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  final public void Opcion_Print() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TERMINATOR:{
      jj_consume_token(TERMINATOR);
      jj_consume_token(DOS_PUN);
      Exp(null);
      break;
      }
    case SEPARATOR:{
      jj_consume_token(SEPARATOR);
      jj_consume_token(DOS_PUN);
      Exp(null);
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// =============================
// PARÁMETROS
// =============================
  final public void Parametros() throws ParseException {
    Parametro();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        ;
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        break label_6;
      }
      jj_consume_token(COMA);
      Parametro();
    }
}

  final public void Parametro() throws ParseException {Token id; Token tipo;
    id = jj_consume_token(IDENT);
    jj_consume_token(DOS_PUN);
    tipo = Tipo();
TokenAsignaciones.InsertarSimbolo(id, tipo != null ? tipo.kind : 20, null);
}

// =============================
// LISTAS / EXPRESIONES
// =============================
  final public void ListaExp() throws ParseException {
    Exp(null);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        ;
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMA);
      Exp(null);
    }
}
